syntax = "proto3";

package golem.registry;

import public "golem/component/agent.proto";
import public "golem/component/component_id.proto";

message RegisteredAgentTypeImplementer {
  golem.component.ComponentId component_id = 1;
  uint64 component_revision = 2;
}

message RegisteredAgentType {
  golem.component.AgentType agent_type = 1;
  RegisteredAgentTypeImplementer implemented_by = 2;
}

message AgentDeploymentDetails {
  string agent_type_name = 1;
  optional string webhook_prefix_authority_and_path = 3;
}
